deploy/kubernetes/squash-tm-ingress.yaml
##########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /squash-tm
        backend:
          serviceName: squash-tm
          servicePort: 8080
